# inaturalist-to-mykis

./: .gitignore  CHANGELOG.md  README.md  app.py  build_exe.bat  pyproject.toml  requirements.txt
.claude/: settings.json
assets/: 2026-02-07_layout_mykdaten.xls  mykdaten.json  wirt_uebersetzungen.csv
assets/b25_utm32s/: b25_utm32s.dbf  b25_utm32s.shp  b25_utm32s.shx
docs/: documentation.html  documentation.md
docu/: doucmentation.md
src/: __init__.py  config.py  convert.py  gui.py  io_validate.py  settings.py  version.py
tests/: test_convert.py
tests/testdatein/: TEST_Fundort-Refernzliste.xlsx  TEST_Namensliste.xlsx  TEST_iNaturalist.csv
