[project]
name = "inaturalist-to-mykis"
version = "0.12.0"
description = "Konvertiert iNaturalist-CSV-Exporte ins Mykis-Format (mit MTB-Zuordnung)."
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "openpyxl>=3.1",  # .xlsx lesen/schreiben
    "xlrd>=2.0",      # .xls lesen
    "xlwt>=1.3",      # .xls schreiben
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
